--- a/Banco GOI/src/main/webapp/templates/cadastro.html
+++ b/Banco GOI/src/main/webapp/templates/cadastro.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Cadastro • GOI Bank</title>
+    <title>Cadastro • GOIA Bank</title>
     <link rel="stylesheet" href="/static/css/cadastro.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
+    <link rel="icon" type="image/png" href="/static/img/goia-icon-header.png">
 </head>
 <body>
 
 <header>
-    <img src="/static/img/goi-icon-header.png" alt="Logo GOI" class="icone-goi">
-    <h1>GOI Bank</h1>
+    <img src="/static/img/goia-icon-header.png" alt="Logo GOIA" class="icone-goia" style="width: 52px;">
+    <h1 style="font-family: 'Outfit', sans-serif; font-weight: 500; color: #000; margin-top: 10px; font-size: 26px;">GOIA Bank</h1>
 </header>
 
 <main class="container-principal">
     <div class="wizard-wrapper">
-        <img src="/static/img/goi-icon-header.png" alt="Logo" class="logo-center">
+        <img src="/static/img/goia-icon-header.png" alt="Logo" class="logo-center" style="width: 52px;">
         <h2 class="titulo">Abra sua conta</h2>
         <p  class="subtitulo">Leva apenas alguns minutos.</p>
 
@@ -92,7 +92,7 @@
 
 <footer class="footer">
     <div class="footer__section">
-        <h4>Banco GOI</h4>
+        <h4>Banco GOIA</h4>
         <p>
             Rua Casa da Atriz, 969, Vila Olímpia<br>
             Horário de funcionamento: 10h às 17h
@@ -152,9 +152,12 @@
 <!-- ---------- POP-UP de sucesso ---------- -->
 <div id="popupSucesso" class="popup-mask">
     <div class="popup-box">
-        <h3>Conta criada!</h3>
-        <p>Seu cadastro foi concluído com sucesso.</p>
-        <button id="btnOk">OK</button>
+        <img src="/static/img/mascote-feliz.png" alt="Mascote Feliz" style="width:80px;height:80px;margin-bottom:20px;border-radius:50%;">
+        <h3>🎉 Conta criada com sucesso!</h3>
+        <p>Bem-vindo(a) ao <strong>GOIA Bank</strong>!<br>
+        Sua conta foi criada e você ganhou <strong>R$ 1.500</strong> de bônus.<br>
+        Agora é só fazer o login e aproveitar.</p>
+        <button id="btnOk">Voltar ao Início</button>
     </div>
 </div>
 
