--- a/Banco GOI/src/main/webapp/templates/home.html
+++ b/Banco GOI/src/main/webapp/templates/home.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/home.css">
-    <title>GOI Bankline - Menu Inicial</title>
-    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
+    <title>GOIA Bankline - Menu Inicial</title>
+    <link rel="icon" type="image/png" href="/static/img/goia-icon-header.png">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 <header>
-    <img src="/static/img/goi-icon-header.png" alt="Logo Icone" class="icone-goi">
-    <h1>GOI Bank</h1>
+    <img src="/static/img/goia-icon-header.png" alt="Logo Icone" class="icone-goia" style="width: 52px;">
+    <h1 style="font-family: 'Outfit', sans-serif; font-weight: 500; color: #000; margin-top: 10px; font-size: 26px;">GOIA Bank</h1>
     <nav class="menu">
         <img src="/static/img/person.png" alt="Icone de usuário" class="icone-user">
         <div class="dados-conta">
@@ -88,7 +88,7 @@
                         <img src="/static/img/cartaoBlack.png" alt="" class="cartao__icon">
                         <div>
                             <a href="#" class="cartao__link">
-                                Goi Black Visa Platinum – final 1234
+                                Goia Black Visa Platinum – final 1234
                             </a>
                             <div class="cartao__sub">
                                 Limite disponível: <span class="limite-cartao">R$ 00,00</span>
@@ -116,7 +116,7 @@
 <!-- FOOTER -->
 <footer class="footer">
     <div class="footer__section">
-        <h4>Banco GOI</h4>
+        <h4>Banco GOIA</h4>
         <p>
             Rua Casa da Atriz, 969, Vila Olímpia<br>
             Horário de funcionamento: 10h às 17h
