--- a/Banco GOI/src/main/webapp/templates/login.html
+++ b/Banco GOI/src/main/webapp/templates/login.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Use caminhos absolutos para garantir que os recursos sejam encontrados -->
     <link rel="stylesheet" href="/static/css/login.css">
-    <title>GOI Bankline - 24h</title>
-    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
+    <title>GOIA Bankline - 24h</title>
+    <link rel="icon" type="image/png" href="/static/img/goia-icon-header.png">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 <header>
-    <img src="/static/img/goi-icon-header.png" alt="Logo Icone" class="icone-goi">
-    <h1>GOI Bank</h1>
+    <img src="/static/img/goia-icon-header.png" alt="Logo Icone" class="icone-goia" style="width: 52px;">
+    <h1 style="font-family: 'Outfit', sans-serif; font-weight: 500; color: #000; margin-top: 10px; font-size: 26px;">GOIA Bank</h1>
 </header>
 
 <div class="container-principal">
@@ -49,14 +49,14 @@
                 <!-- (Se quiser, pode remover senhaReal se não for mais usado) -->
                 <input type="hidden" id="senhaReal" name="senhaReal">
 
-                <a href="mailto:contato@goibank.com.br?subject=Esqueci%20minha%20senha&body=Olá, sou cliente do Banco GOI e esqueci minha senha.%0AMeu CPF é: " target="_blank" class="recuperar-senha">esqueceu sua senha?</a>
+                <a href="mailto:contato@goiabank.com.br?subject=Esqueci%20minha%20senha&body=Olá, sou cliente do Banco GOIA e esqueci minha senha.%0AMeu CPF é: " target="_blank" class="recuperar-senha">esqueceu sua senha?</a>
             </div>
         </div>
     </form>
 
     <div class="container-alerta">
         <img src="/static/img/warning.png" alt="">
-        <h4>Se o nome acima não estiver correto, não continue a operação e mande um <a href="mailto:contato@goibank.com.br">e-mail</a></h4>
+        <h4>Se o nome acima não estiver correto, não continue a operação e mande um <a href="mailto:contato@goiabank.com.br">e-mail</a></h4>
     </div>
 
     <div class="container-aviso">
