--- a/Banco GOI/src/main/webapp/templates/transferencia.html
+++ b/Banco GOI/src/main/webapp/templates/transferencia.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/transferencia.css">
-    <title>GOI Bankline - Transferência</title>
-    <link rel="icon" type="image/png" href="/static/img/goi-icon-header.png">
+    <title>GOIA Bankline - Transferência</title>
+    <link rel="icon" type="image/png" href="/static/img/goia-icon-header.png">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 <header>
-    <img src="static/img/goi-icon-header.png" alt="Logo Ícone" class="icone-goi">
-    <h1>GOI Bank</h1>
+    <img src="static/img/goia-icon-header.png" alt="Logo Ícone" class="icone-goia" style="width: 52px;">
+    <h1 style="font-family: 'Outfit', sans-serif; font-weight: 500; color: #000; margin-top: 10px; font-size: 26px;">GOIA Bank</h1>
     <nav class="menu">
         <img src="static/img/person.png" alt="Ícone de usuário" class="icone-user">
         <div class="dados-conta">
@@ -70,7 +70,7 @@
 <!-- FOOTER -->
 <footer class="footer">
     <div class="footer__section">
-        <h4>Banco GOI</h4>
+        <h4>Banco GOIA</h4>
         <p>
             Rua Casa da Atriz, 969, Vila Olímpia<br>
             Horário de funcionamento: 10h às 17h
