--- a/Banco GOI/src/main/webapp/static/css/login.css
+++ b/Banco GOI/src/main/webapp/static/css/login.css
@@ -29,7 +29,7 @@ header > h1 {
     font-size: 26px;
 }
 
-.icone-goi {
+.icone-goia {
     height: 52px;
     width: 52px;
     margin-right: 12px;
