fix: redirecionamento para aws

--- a/Banco GOI/src/main/webapp/templates/extrato.html
+++ b/Banco GOI/src/main/webapp/templates/extrato.html
@@ -102,6 +102,7 @@
 </footer>
 
 <!-- ====== JS ==================================================================== -->
+<script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/home.js"></script>   <!-- reaproveita as regras globais -->
 <script src="/static/js/extrato.js"></script>
 </body>
