--- a/Banco GOI/src/main/webapp/templates/home.html
+++ b/Banco GOI/src/main/webapp/templates/home.html
@@ -217,6 +217,7 @@
     </div>
 </div>
 
+<script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/home.js"></script>
 
 <!-- BOTÃO/BOLINHA -->
