--- a/Banco GOI/src/main/webapp/templates/transferencia.html
+++ b/Banco GOI/src/main/webapp/templates/transferencia.html
@@ -127,7 +127,8 @@
 </footer>
 
 
-<script src="static/js/transferencia.js"></script>
+<script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
+<script src="/static/js/transferencia.js"></script>
 
 <!-- overlay de loading (fica escondido) -->
 <div id="loadingOverlay" class="overlay hidden">
