--- a/Banco GOI/src/main/webapp/templates/cadastro.html
+++ b/Banco GOI/src/main/webapp/templates/cadastro.html
@@ -161,6 +161,7 @@
     </div>
 </div>
 
+<script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/cadastro.js"></script>
 </body>
 </html>
