--- a/Banco GOI/src/main/webapp/templates/login.html
+++ b/Banco GOI/src/main/webapp/templates/login.html
@@ -102,6 +102,7 @@
 </div>
 
 <!-- Seu script principal -->
+<script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/login.js"></script>
 </body>
 </html>
