--- a/Banco GOIA/src/main/webapp/templates/extrato.html
+++ b/Banco GOIA/src/main/webapp/templates/extrato.html
@@ -20,7 +20,7 @@
 <!-- ====== HEADER (mesmo markup das outras telas) ================================= -->
 <header>
   <img src="/static/img/goia-icon-header.png" alt="Logo GOIA" class="icone-goia" style="width: 52px;">
-  <h1 style="font-family: 'Outfit', sans-serif; font-weight: 500; color: #000; margin-top: 10px; font-size: 26px;">GOIA Bank</h1>
+  <h1 style="font-family: 'Outfit', sans-serif; font-weight: 600; color: #ff4f5a; margin-top: 10px; font-size: 26px;">GOIA Bank</h1>
 
   <nav class="menu">
     <img src="/static/img/person.png" alt="Usuário" class="icone-user">
