--- a/Banco GOIA/src/main/webapp/templates/cadastro.html
+++ b/Banco GOIA/src/main/webapp/templates/cadastro.html
@@ -12,7 +12,9 @@
 
 <header>
     <img src="/static/img/goia-icon-header.png" alt="Logo GOIA" class="icone-goia" style="width: 52px;">
-    <h1 style="font-family: 'Outfit', sans-serif; font-weight: 600; color: #ff4f5a; margin-top: 10px; font-size: 26px;">GOIA</h1>
+    <a href="/" class="logo-link">
+        <h1>GOIA</h1>
+    </a>
 </header>
 
 <main class="container-principal">
