fix: NPS e disclaimer de projeto acadêmico

--- a/Banco GOIA/src/main/webapp/templates/cadastro.html
+++ b/Banco GOIA/src/main/webapp/templates/cadastro.html
@@ -201,6 +201,11 @@ console.log('Search:', window.location.search);
 
 
 </script>
+
+<!-- CSS e JS do Disclaimer Acadêmico -->
+<link rel="stylesheet" href="/static/css/disclaimer.css">
+<script src="/static/js/disclaimer.js"></script>
+
 <script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/cadastro.js"></script>
 </body>
