--- a/Banco GOIA/src/main/webapp/templates/extrato.html
+++ b/Banco GOIA/src/main/webapp/templates/extrato.html
@@ -101,6 +101,10 @@
   <div class="img-24h"><img src="/static/img/24h.png" alt="24 h"></div>
 </footer>
 
+<!-- CSS e JS do Disclaimer Acadêmico -->
+<link rel="stylesheet" href="/static/css/disclaimer.css">
+<script src="/static/js/disclaimer.js"></script>
+
 <!-- ====== JS ==================================================================== -->
 <script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/home.js"></script>   <!-- reaproveita as regras globais -->
