--- a/Banco GOIA/src/main/webapp/templates/login.html
+++ b/Banco GOIA/src/main/webapp/templates/login.html
@@ -101,6 +101,10 @@
     </div>
 </div>
 
+<!-- CSS e JS do Disclaimer Acadêmico -->
+<link rel="stylesheet" href="/static/css/disclaimer.css">
+<script src="/static/js/disclaimer.js"></script>
+
 <!-- Seu script principal -->
 <script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/login.js"></script>
