--- a/Banco GOIA/src/main/webapp/templates/home.html
+++ b/Banco GOIA/src/main/webapp/templates/home.html
@@ -217,6 +217,10 @@
     </div>
 </div>
 
+<!-- CSS e JS do Disclaimer Acadêmico -->
+<link rel="stylesheet" href="/static/css/disclaimer.css">
+<script src="/static/js/disclaimer.js"></script>
+
 <script src="/static/js/url-manager.js"></script>  <!-- Gerenciador de URLs dinâmicas -->
 <script src="/static/js/home.js"></script>
 
