--- a/Banco GOIA/src/main/webapp/templates/login.html
+++ b/Banco GOIA/src/main/webapp/templates/login.html
@@ -12,7 +12,8 @@
 <body>
 <header>
     <img src="/static/img/goia-icon-header.png" alt="Logo Icone" class="icone-goia" style="width: 52px;">
-    <h1 style="font-family: 'Outfit', sans-serif; font-weight: 600; color: #ff4f5a; margin-top: 10px; font-size: 26px;">GOIA Bank</h1>
+    <h1 style="font-family: 'Outfit', sans-serif; font-weight: 600; color: #ff4f5a; margin-top: 10px; font-size: 26px; cursor: pointer;" 
+        onclick="if(window.urlManager) { window.urlManager.goHome(); } else { window.location.href='/'; }">GOIA Bank</h1>
 </header>
 
 <div class="container-principal">
