--- a/Banco GOIA/src/main/webapp/templates/cadastro.html
+++ b/Banco GOIA/src/main/webapp/templates/cadastro.html
@@ -18,7 +18,7 @@
 
 <header>
     <img src="/static/img/goia-icon-header.png" alt="Logo GOIA" class="icone-goia" style="width: 52px;">
-    <a href="/" class="logo-link">
+    <a href="../index.html" class="logo-link">
         <h1>GOIA</h1>
     </a>
 </header>
