--- a/Banco GOIA/src/main/webapp/templates/erro.html
+++ b/Banco GOIA/src/main/webapp/templates/erro.html
@@ -52,7 +52,7 @@
             <button onclick="window.history.back()" class="btn-voltar">
                 ← Voltar
             </button>
-            <button onclick="window.location.href='/'" class="btn-inicio">
+            <button onclick="window.location.href='../index.html'" class="btn-inicio">
                 🏠 Início
             </button>
             <button onclick="window.location.reload()" class="btn-tentar">
