feat: sessão GOIA Shop em home

--- a/Banco GOIA/src/main/webapp/templates/home.html
+++ b/Banco GOIA/src/main/webapp/templates/home.html
@@ -55,6 +55,11 @@
                 <a href="/extrato">extrato</a>
                 <img src="/static/img/arrow_right.png" alt="Seta para extrato" class="seta-sidebar">
             </li>
+            <li>
+                <img src="/static/img/local_mall.png" alt="Imagem de shopping">
+                <a href="#">GOIA Shop</a>
+                <img src="/static/img/arrow_right.png" alt="Seta para GOIA Shop" class="seta-sidebar">
+            </li>
         </ul>
     </aside>
     <section class="conteudo-principal">
